# fastapi-recipes-tutorial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg  tbump.toml
.github/workflows/: bump-version.yml  tests.yml
alembic/: env.py
alembic/versions/: fd07679caa56_initial_data.py
app/: __init__.py  config.py  main.py  models.py  schemas.py
app/crud/: base.py
app/db/: base.py  session.py
templates/: index.html
tests/: conftest.py  test_main.py  test_schemas.py
tests/crud/: test_base.py
