[tool.poetry]
name = "recipes-api"
version = "0.1.3"
description = "Ultimate tutorial about FastAPI"
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {version = "^1.9.1", extras = ["email"]}
python-multipart = "^0.0.5"
uvicorn = "^0.17.6"
fastapi = {version = "^0.78.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
tbump = "^6.9.0"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.960"
typing-extensions = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
