[tool.poetry]
name = "recipes-api"
version = "0.1.7"
description = "Ultimate tutorial about FastAPI"
authors = ["ChristopherGS"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.7"
tag_format = "v$major.$minor.$patch$prerelease"
annotated_tag = true
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "app/__init__.py:__version__"
]


[tool.poetry.dependencies]
python = "^3.9"
pydantic = {version = "^1.9.1", extras = ["email"]}
python-multipart = "^0.0.5"
uvicorn = "^0.17.6"
fastapi = {version = "^0.78.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.960"
typing-extensions = "^4.2.0"
commitizen = "^2.27.1"
pre-commit = "^2.19.0"
black = "^22.3.0"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
